--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -20,3 +20,7 @@ spring.liquibase.enabled=false
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
 spring.thymeleaf.cache=false
+
+spring.main.allow-circular-references=true
+
+hostName=localhost
