--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-security.basic.enabled=false
-management.security.enabled=false
+#security.basic.enabled=false
+#management.security.enabled=false
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=DEBUG
@@ -24,3 +24,5 @@ spring.thymeleaf.cache=false
 spring.main.allow-circular-references=true
 
 hostName=localhost
+
+spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
