--- a/web/src/main/resources/application.properties
+++ b/web/src/main/resources/application.properties
@@ -1,6 +1,4 @@
 spring.mvc.pathmatch.matching-strategy=ant-path-matcher
-#security.basic.enabled=false
-#management.security.enabled=false
 
 logging.level.org.springframework.web=DEBUG
 logging.level.org.hibernate=DEBUG
@@ -9,8 +7,11 @@ server.error.include-message=always
 server.error.include-binding-errors=always
 server.error.include-stacktrace=on_param
 server.error.include-exception=false
-server.error.path=/error
 server.error.whitelabel.enabled=false
+server.error.path=/error
+
+spring.mvc.servlet.path=/
+server.servlet.context-path=/
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
@@ -25,4 +26,7 @@ spring.main.allow-circular-references=true
 
 hostName=localhost
 
-spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.servlet.error.ErrorMvcAutoConfiguration
+#spring.autoconfigure.exclude=org.springframework.boot.autoconfigure.web.ErrorMvcAutoConfiguration
+
+spring.mvc.throw-exception-if-no-handler-found=true
+spring.resources.add-mappings=false
